--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "api": "^6.1.1"
+    "api": "^6.1.1",
+    "express": "^4.18.2"
   }
 }
